<resources>

    <string name="app_name">不要玩手机</string>
    <string name="login_weixin">微信登录</string>
    <string name="unlogin_try">免登录试用</string>
    <string name="login_now">立即开始</string>

    <string name="alert_network_inavailble">网络不给力！</string>

    <string name="mode_promotion_hint_1">情侣用了它\n更加幸福了，再也不用担心家务谁来做了</string>
    <string name="mode_promotion_hint_2">朋友们用了它\n更加融洽了，大宝今天见，大宝天天见</string>
    <string name="mode_promotion_hint_3">同事用了它\工作更有效率了，升职加薪杠杠滴</string>

    <string name="mode_button_text_couple">进入情侣模式</string>
    <string name="mode_button_text_party">进入聚会模式</string>
    <string name="mode_button_text_work">进入工作模式</string>

    <!--<string name="lock_period_setting_hint">设定锁定时间</string>-->
    <string name="lock_period_setting_hint">锁定时长</string>
    <string name="lock_hint_click_to_lock">点击锁定图标开始锁定TA</string>
    <string name="lock_hint_click_to_lock_party">设备还没有锁定，请选择建立或者加入</string>

    <!-- 寻找配对手机 -->
    <string name="text_finding_phone_hint">正在搜寻对方手机...</string>
    <string name="text_phone_found">搜寻到“%s”</string>

    <string name="usage_net_hint">请确认双方具有蓝牙功能或WIFI功能</string>
    <string name="send_phone_lock_request_hint">发送锁定邀请</string>

    <string name="btn_cancel">取消</string>
    <string name="btn_start_party">开始</string>
    <string name="btn_delete">删除</string>
    <string name="btn_default">设为默认</string>
    <string name="btn_save">保存</string>

    <string name="lock_request_confirm_tip">要开始锁定吗？</string>
    <string name="btn_start_lock">开始</string>
    <string name="btn_refuse_lock">不想</string>
    <string name="btn_giveup_confirm">放弃</string>
    <string name="btn_giveup_cancel">坚持住</string>

    <string name="barcode_hint">锁屏码</string>
    <string name="hint_click_to_startserver">下滑建立</string>
    <string name="hint_click_to_joinserver">点击加入</string>
    <string name="hint_scan_barcode_join">给朋友们扫一扫，让他们快快加入吧</string>
    <string name="hint_user_already_in">已加入小伙伴</string>

    <string name="toast_default_saved">保存成功</string>
    <string name="toast_save_fail">保存失败</string>
    <string name="toast_delete_succ">删除成功</string>
    <string name="toast_delete_fail">删除失败</string>

    <string name="scan_text"></string>

    <string name="title_setting">设置</string>
    <string name="title_purnish">惩罚措施</string>

    <string name="lottery_share_title">分享到</string>

    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_weixin">微信好友</string>
    <string name="share_weixin_friends">朋友圈</string>
    <string name="share_text_default">放开那手机</string>
    <string name="share_click_text">请猛戳：</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="weixin_notinstalled_prompt">微信未安装，请先下载安装微信客户端！</string>
    <string name="weibo_cancel_auth">新浪微博授权已取消</string>
    <string name="auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibo_download_cancelled_prompt">已取消下载新浪微博客户端！</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>

    <!-- purnish -->
    <string name="tip_giveup_confirm">确定要放弃？</string>
    <string name="title_mission_fail">任务失败</string>
    <string name="tip_mission_fail">放弃了两个人的约定，让TA好伤心，为TA做点什么吧：）</string>
    <string name="default_content_purnish">向TA下跪求饶：宝贝对不起</string>
    <string name="purnish_accept_share">接受并分享</string>
    <string name="purnish_play">播放</string>

    <string name="default_share_content">哎，有放弃了。快来看看你能坚持多长时间吧！</string>

</resources>
