<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#f3f3f3"
              android:visibility="gone"
              android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/title_mission_fail"
        android:textColor="#000000"
        android:textSize="24sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#000"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tip_mission_fail"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_white_bottom_round"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_content_purnish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/default_content_purnish"
            android:textColor="#000000"
            android:textSize="24sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/pic_purnish_hint"/>

        <Button
            android:id="@+id/btn_purnish_accept_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_green_selector"
            android:text="@string/purnish_accept_share"
            android:textColor="#ffffff"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btn_purnish_play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_blue_selector"
            android:text="@string/purnish_play"
            android:textColor="#ffffff"
            android:textSize="24sp"/>

    </LinearLayout>

</LinearLayout>