<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"

              android:orientation="vertical">


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_yellow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="33dp"
            android:text="吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦"
            android:textColor="#fff"
            android:textSize="28sp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#fff"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:text="@string/tip_giveup_confirm"
            android:textColor="#444"
            android:textSize="28sp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_giveup_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32sp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_orange_selector"
                android:text="@string/btn_giveup_confirm"
                android:textColor="#fff"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/btn_giveup_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12sp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_green_selector"
                android:text="@string/btn_giveup_cancel"
                android:textColor="#fff"
                android:textSize="24sp"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>