<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#f3f3f3"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/btn_cancel_joined_popup"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:minWidth="50dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/btn_cancel"
            android:textColor="#000"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/tv_btn_start_party"
            android:layout_toRightOf="@+id/btn_cancel_joined_popup"
            android:gravity="center"
            android:text="LOCKLOCK"
            android:textColor="#4c4c4c"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tv_btn_start_party"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:gravity="center_vertical"
            android:minWidth="50dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/btn_start_party"
            android:textColor="#169bef"
            android:textSize="20sp"
            />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#000"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <GridView
            android:id="@+id/gv_joined_users"
            android:numColumns="3"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@android:color/transparent"
            android:fadingEdge="none"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:verticalSpacing="10dp"
            android:layout_width="fill_parent"
            android:layout_height="150dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="80dp">

            <ImageView
                android:id="@+id/iv_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:text="@string/hint_scan_barcode_join"
                />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>